--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "crankd/rapid-custom-fields",
   "description": "",
+  "type": "library",
   "license": "MIT",
   "version": "1.0.0",
   "authors": [
@@ -10,7 +11,10 @@
     }
   ],
   "minimum-stability": "dev",
-  "require": {},
+  "require": {
+    "php": "^7.3",
+    "illuminate/support": "^8.0"
+  },
   "autoload": {
     "psr-4": {
       "Crankd\\RapidCustomFields\\": "src/"
