--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "## LOAD JS FILES",
   "main": "resources/js/rapid-custom-fields.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "dev": "vite",
+    "build": "vite build"
+},
+  "devDependencies": {
+    "alpinejs": "^3.4.2",
+    "autoprefixer": "^10.4.2",
+    "axios": "^1.1.2",
+    "laravel-vite-plugin": "^0.7.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.1.0",
+    "vite": "^4.0.0"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Crankd-Media/rapid-custom-fields.git"
