--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^8.0",
-    "illuminate/support": "^8.0"
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
