--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "laravel-vite-plugin": "^0.7.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.1.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "slugify": "^1.6.5"
 },
   "repository": {
     "type": "git",
