--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.1.0",
     "vite": "^4.0.0",
-    "slugify": "^1.6.5"
+    "@shoelace-style/shoelace": "^2.1.0"
 },
   "repository": {
     "type": "git",
