--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "laravel-vite-plugin": "^0.7.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.1.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "sortablejs": "^1.15.0"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/Crankd-Media/rapid-custom-fields/issues"
   },
-  "homepage": "https://github.com/Crankd-Media/rapid-custom-fields#readme"
+  "homepage": "https://github.com/Crankd-Media/rapid-custom-fields#readme",
+  "dependencies": {
+    "sortablejs": "^1.15.0"
+  }
 }
